dark and light mode fully implemented, resolution made slightly bigger

--- a/23381752_23388102_Client/src/main/resources/styles/dark.css
+++ b/23381752_23388102_Client/src/main/resources/styles/dark.css
@@ -36,8 +36,8 @@
     -fx-border-radius: 10px;
     -fx-background-radius: 10px;
     -fx-padding: 7px;
-    -fx-background-color: #3B4252;
-    -fx-text-fill: white;
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #656565;
 }
 
 /* Labels */
@@ -46,3 +46,6 @@
     -fx-text-fill: #D8DEE9;
 }
 
+.module-label {
+    -fx-text-fill: white;
+}
